# checkmate-ce

./: LICENSE  LICENSE.txt  Pipfile  README.md  README.txt  exceptions.py  pyproject.toml  requirements.txt  setup.py
.checkmate/: config.json
.github/workflows/: auto-tag.yml  publish-to-pypi.yml
checkmate/: __main__.py  exceptions.py
checkmate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
checkmate/contrib/: __init__.py
checkmate/contrib/plugins/all/bandit/: analyzer.py  issues_data.py  setup.py
checkmate/contrib/plugins/all/brakeman/: analyzer.py  setup.py
checkmate/contrib/plugins/all/checkov/: analyzer.py  issues_data.py  setup.py
checkmate/contrib/plugins/all/confused/: analyzer.py  issues_data.py  setup.py
checkmate/contrib/plugins/all/fluidattacksscanner/: analyzer.py  setup.py
checkmate/contrib/plugins/all/gosec/: analyzer.py  issues_data.py  setup.py
checkmate/contrib/plugins/all/gostaticcheck/: analyzer.py  issues_data.py  setup.py
checkmate/contrib/plugins/all/gptanalyzer/: analyzer.py  issues_data.py  setup.py
checkmate/contrib/plugins/all/graudit/: analyzer.py  setup.py
checkmate/contrib/plugins/all/insiderseccsharp/: analyzer.py  issues_data.py  setup.py
checkmate/contrib/plugins/git/: models.py  setup.py
checkmate/helpers/: facts.py  issue.py  settings.py
checkmate/lib/: backend.py  models.py
checkmate/lib/analysis/: base.py
checkmate/lib/code/: environment.py
checkmate/lib/stats/: mapreduce.py
checkmate/management/: helpers.py
checkmate/management/commands/: alembic.py  analyze.py  base.py  init.py  issues.py  reset.py  shell.py  snapshots.py  stats.py  summary.py  watch.py
checkmate/management/commands/props/: __init__.py  get.py
checkmate/scripts/: manage.py
checkmate/settings/: base.py  defaults.py
checkmate/test/: helpers.py
checkmate/test/diff/: test_basic_diff.py  test_object_diffing.py
checkmate/test/settings/: __init__.py
checkmate2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
checkmate3.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  entry_points.txt  requires.txt
checkmate5.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
lib/: models.py
management/: helpers.py
(+142 files in other folders)
